# RayTracer

./: .gitignore  CMakeLists.txt  README.md  location_notes.txt  main.cpp
images/: sample_image.ppm
keys/: eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
src/: color.h  main.cpp  ray.h  vec3.h
